# nirieww

./: Cargo.toml  README.md  flake.nix
src/: icon.rs  main.rs
