[package]
name = "hypreww"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.3", features = ["derive"] }
color-eyre = "0.6.2"
freedesktop-desktop-entry = "0.5.0"
hyprland = "0.3.11"
serde = "1.0.188"
serde_json = "1.0.107"
xdgkit = "3.2.5"
