[package]
name = "nirieww"
version = "25.8.1"
edition = "2024"

[dependencies]
clap = { version = "4.4.3", features = ["derive"] }
color-eyre = "0.6.2"
freedesktop-desktop-entry = "0.5.0"
serde = "1.0.203"
serde_json = "1.0.118"
xdgkit = "3.2.5"
niri-ipc = { git = "https://github.com/YaLTeR/niri/", branch = "main" }
itertools = "0.14.0"
